# voice-app

./: .env.example  .gitignore  .ls-lint.yml  .tool-versions  CLAUDE.md  Makefile  README.md  debug_frontend.html  debug_sse.py  docker-compose.yml
.claude/: settings.json
.claude/hooks/: check-worktree.sh
.claude/skills/adr/: SKILL.md
.config/: lefthook.yml
.config/scripts/: check-branch-name.sh  check-worktree.sh  enforce-worktree.sh  protect-shadcn.sh
backend/: pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py
backend/app/chat/: repository.py  router.py  schemas.py  service.py
backend/app/claude_code/: service.py
backend/app/code_executor/: service.py
backend/app/git/: router.py  service.py
backend/app/voice/: classifier.py  image.py  router.py  sse.py
backend/tests/: conftest.py  test_chat_service.py  test_classifier.py  test_claude_code_service.py  test_code_executor_service.py  test_config.py  test_dependencies.py  test_e2e.py  test_git_router.py  test_git_service.py  test_main.py  test_voice_router.py  test_voice_stream.py  tmp_e2e_test.txt
docs/adr/: 0001-no-worktree-auto-deletion-in-deploy.md  0002-use-dynamic-ports-for-all-services.md  0003-speech-recognition-hook-state-management-checklist.md  0004-investigate-before-integrating-external-cli-subprocess.md  0005-inline-quality-over-bulk-refactoring.md
frontend/: biome.json  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  app.tsx  main.tsx
scripts/: db-url.sh  deploy.sh
(+116 files in other folders)
